# lib3h

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  ;  CHANGELOG-UNRELEASED.md  CHANGELOG.md  Cargo.toml  Makefile  Makefile.nix  README.md  appveyor.yml  config.nix  config1.toml  config2.toml  default.nix  prep-3rd-party.bash  rustfmt.toml
crates/crypto_api/: Cargo.toml  README.md
crates/crypto_api/src/: lib.rs
crates/crypto_api/src/buffer/: buffer_vec_u8.rs  insecure_buffer.rs  mod.rs  read_lock.rs  read_locker.rs  write_lock.rs  write_locker.rs
crates/crypto_api/src/crypto_system/: crypto_system_test.rs  mod.rs
crates/crypto_api/src/error/: mod.rs
crates/crypto_api/src/fake_system/: mod.rs
crates/crypto_api/src/random/: mod.rs
crates/crypto_api/src/sign/: mod.rs
crates/crypto_api/src/system/: mod.rs
crates/detach/: Cargo.toml  README.md
crates/detach/src/: lib.rs
crates/discovery/: Cargo.toml  README.md
crates/discovery/src/: error.rs  lib.rs
crates/ghost_actor/: Cargo.toml  Cargo.toml.orig  README.md  build.rs
crates/ghost_actor/ghost_actor_build_demo/: Cargo.toml  README.md  build.rs
crates/ghost_actor/ghost_actor_build_demo/src/: lib.rs
crates/ghost_actor/ghost_actor_derive/: Cargo.toml  README.md
crates/ghost_actor/ghost_actor_derive/src/: lib.rs
crates/ghost_actor/ghost_actor_derive/tests/: integration.rs
crates/ghost_actor/src/: ghost_actor.rs  ghost_actor_state.rs  ghost_channel.rs  ghost_deep_ref.rs  ghost_error.rs  ghost_mutex.rs  ghost_protocol.rs  ghost_system.rs  ghost_test_harness.rs  ghost_tracker.rs  lib.rs  test_types.rs
crates/ghost_actor/src/code_gen/: mod.rs  protocol.rs  try_fmt.rs
crates/ghost_actor/tests/: manual_example.rs
crates/ghost_actor/tests/manual_example_mod/: mod.rs  test_actor.rs  test_protocol.rs
crates/json_derive/: Cargo.toml  README.md
crates/json_derive/src/: lib.rs
crates/lib3h/: Cargo.toml  Cargo.toml.orig  README.md  build.rs
crates/lib3h/src/: error.rs  keystore.rs  keystore2.rs  lib.rs  message_encoding.rs  p2p_protocol.rs  real_engine.rs  time.rs  track.rs  transport_space.rs
crates/lib3h/src/dht/: dht_config.rs  dht_event.rs  dht_protocol.rs  dht_trait.rs  ghost_protocol.rs  mirror_dht.rs  mod.rs  rrdht.rs
crates/lib3h/src/engine/: engine_actor.rs  ghost_engine.rs  ghost_engine.rs.orig  ghost_engine_wrapper.rs  mod.rs  network_layer.rs  p2p_protocol.rs  real_engine.rs  space_layer.rs
crates/lib3h/src/gateway/: gateway_actor.rs  gateway_dht.rs  gateway_transport.rs  gateway_transport_send.rs  ghost_gateway.rs  mod.rs  p2p_gateway.rs  protocol.rs  wrapper.rs
crates/lib3h/src/ghost_gateway/: gateway_actor.rs  gateway_dht.rs  ghost_gateway.rs  mod.rs  (+1 more)
crates/lib3h/tests/: constants.rs  engine_test.rs  engine_test.rs.orig  integration_test.rs  transport.rs
crates/lib3h_protocol/: Cargo.toml  README.md
crates/lib3h_protocol/src/: data_types.rs  error.rs  fixture.rs  lib.rs  network_engine.rs  protocol.rs  protocol_client.rs  protocol_server.rs  types.rs  uri.rs
crates/mdns/: Cargo.toml  README.md
crates/mdns/examples/: neighbour-dicovery.rs  neighbour-discovery.rs
crates/mdns/src/: builder.rs  dns.rs  dns_old.rs  error.rs  lib.rs  protocol.rs  record.rs  response.rs
crates/mdns/tests/: integration_test.rs  mdns_integration_test.rs
crates/p2p_protocol/: Cargo.toml  README.md
crates/p2p_protocol/doc/: multiplex_protocol.md  p2p_protocol.md  transit_encoding_protocol.md
crates/p2p_protocol/protocol/: multiplex.capnp  p2p.capnp  transit_encoding.capnp  transport_dm.capnp
crates/p2p_protocol/src/: error.rs  lib.rs  multiplex_capnp.rs  p2p.rs  p2p_capnp.rs  transit_encoding_capnp.rs  transport_dm_capnp.rs
crates/persistence_api/: Cargo.toml  README.md
crates/persistence_api/src/: hash.rs  json.rs  lib.rs
crates/persistence_derive/: Cargo.toml  README.md
crates/persistence_derive/src/: lib.rs
crates/persistence_file/: Cargo.toml  README.md
crates/persistence_impl/: Cargo.toml  README.md
crates/persistence_mem/: Cargo.toml  README.md
crates/sodium/: Cargo.toml  README.md
crates/sodium/src/: aead.rs  hash.rs  kdf.rs  kx.rs  lib.rs  pwhash.rs  secbuf.rs  secbuf_util.rs  sign.rs
crates/tools/dump_lib3h_protocol_as_json_for_n3h/: Cargo.toml  README.md
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs  macro.rs
crates/zombie_actor/: Cargo.toml  README.md
crates/zombie_actor/src/: backtwrap.rs  ghost_actor.rs  ghost_channel.rs  ghost_error.rs  ghost_test_harness.rs  ghost_tracker.rs  lib.rs
half_busy_chat/: Cargo.toml
half_busy_chat_cli/: Cargo.toml  README.md
half_busy_chat_cli/src/: main.rs
lib3h/: Cargo.toml
lib3h/src/: aes.rs  client.rs  config.rs  error.rs  errors.rs  hash.rs  http.rs  ident.rs  lib.rs  message.rs  mock_engine.rs  netinfo.rs  network_engine.rs  node.rs  p2p_protocol.rs  real_engine.rs  server.rs  tcp.rs  transport.rs  transport_dna.rs  transport_space.rs  util.rs
lib3h/src/crypto/: rsa.rs
lib3h/src/dht/: dht_event.rs  dht_trait.rs  mod.rs  rrdht.rs
lib3h/src/p2p/: mod.rs  p2p_event.rs  p2p_gateway.rs  p2p_hackmode.rs  p2p_protocol.rs  p2p_trait.rs
lib3h/src/test_fixtures/: rsa_priv_pack_1  rsa_priv_raw_1  rsa_pub_pack_1  rsa_pub_raw_1
lib3h/src/transport/: memory_server.rs  mod.rs  protocol.rs  transport_memory.rs  transport_trait.rs
lib3h/src/transport_wss/: mod.rs  tcp.rs
lib3h/tests/: integration_test.rs  std_net.rs
libsodacon/: Cargo.toml
libsodacon/src/: error.rs  errors.rs  lib.rs  node.rs
libsodacon/src/crypto/: mod.rs  rand.rs  sign.rs
libsodacon/src/net/: endpoint.rs  event.rs  http.rs  message.rs  mod.rs  node.rs  session_client.rs  session_server.rs
logging/: Cargo.toml  Readme.md
logging/examples/: custom_level.rs  features.rs  toml_config.rs
logging/src/: lib.rs
mdns/: Cargo.toml
mdns/src/: lib.rs  response.rs
sodium/: Cargo.toml  README.md
sodium/src/: aead.rs  error.rs  hash.rs  kdf.rs  kx.rs  lib.rs  pwhash.rs  secbuf.rs  secbuf_util.rs  sign.rs
tools/hbc/: Cargo.toml  README.md
tools/hbc_cli/: Cargo.toml  README.md
tools/hbc_cli/src/: main.rs
(+215 files in other folders)
