[workspace]

members = [
  "crates/logging",
  "crates/crypto_api",
  "crates/sodium",
  "crates/lib3h_protocol",
  "crates/lib3h",
  "crates/tools/half_busy_chat",
  "crates/persistence_api",
  "crates/persistence_mem",
  "crates/persistence_file",
  "crates/persistence_pickle",
  "crates/json_api",
  "crates/json_derive"
]
