[workspace]

members = [
  "crates/logging",
  "crates/crypto_api",
  "crates/sodium",
  "crates/lib3h_protocol",
  "crates/lib3h",
  "crates/tools/half_busy_chat",
  "crates/holochain_persistence_api",
  "crates/holochain_persistence_mem",
  "crates/holochain_persistence_file",
  "crates/holochain_persistence_pickle",
  "crates/holochain_json_api",
  "crates/holochain_json_derive"
]
