[package]
name = "holochain_lib3h"
version = "0.0.1-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"

[dependencies]
holochain_logging = { path = "../logging" }
holochain_lib3h_protocol = { path = "../lib3h_protocol" }
holochain_sodium = { path = "../sodium" }
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }