[package]
name = "lib3h_mdns"
version = "0.0.1-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h mdns LAN discovery module"
keywords = ["holochain", "holo", "mdns", "network-programming"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_mdns"
repository = "https://github.com/holochain/lib3h"

[dependencies]
dns-parser = "=0.8.0"
net2 = "=0.2.33"
