[package]
name = "holochain_sodium"
version = "0.0.1-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "holochain libsodium wrapper providing memory secure api access"
keywords = ["NaCl", "libsodium", "cryptography"]
categories = ["cryptography"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_sodium"
repository = "https://github.com/holochain/lib3h"

[dependencies]
holochain_lib3h_protocol = { path = "../lib3h_protocol", version = "=0.0.1-alpha1" }
lazy_static = "=1.2.0"
libc = "=0.2.50"
rust_sodium = "=0.10.2"
rust_sodium-sys = "=0.10.4"
