[package]
name = "lib3h_discovery"
version = "0.0.10"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "Trait utility to discover participants on the network"
keywords = ["holochain", "holo", "mdns", "network-programming"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_discovery"
repository = "https://github.com/holochain/lib3h"

[dependencies]
