[package]
name = "lib3h_ghost_actor"
version = "0.0.10"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h actor request tracking module"
keywords = ["holochain", "holo"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_ghost_actor"
repository = "https://github.com/holochain/lib3h"

[dependencies]
crossbeam-channel = "=0.3.8"
detach = { version = "=0.0.10", path = "../detach" }
nanoid = "=0.2.0"
shrinkwraprs = "=0.2.1"

[dev-dependencies]
env_logger = "=0.6.1"
