[package]
name = "ghost_actor"
version = "0.0.16"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "Actor System designed for ergonomic async request callbacks"
keywords = ["holochain", "holo"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ghost_actor"
repository = "https://github.com/holochain/lib3h"

[dependencies]
crossbeam-channel = "=0.3.8"
holochain_tracing = { version = "=0.0.1", git = "https://github.com/holochain/holochain-tracing" }
Inflector = "=0.11.4"
lazy_static = "=1.2.0"
lib3h_zombie_actor = { version = "=0.0.16", path = "../zombie_actor" }
lock_api = "=0.1.5"
log = "=0.4.8"
nanoid = "=0.2.0"
parking_lot = "=0.7.1"
proc-macro2 = "=1.0.3"
quote = "=1.0.2"
shrinkwraprs = "=0.2.1"
syn = { version = "=1.0.5", features = [ "full", "extra-traits" ] }

[dev-dependencies]
env_logger = "=0.6.1"
rustracing = "=0.2.0"
rustracing_jaeger = "=0.2.1"