[package]
name = "lib3h"
version = "0.0.10"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
# crates.io stuff
description = "The lib3h p2p communication rust library."
keywords = ["holochain", "holo", "p2p", "network"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h"
repository = "https://github.com/holochain/lib3h"

[dependencies]
backtrace = "=0.3.26"
hcid = "=0.0.6"
holochain_persistence_api = "=0.0.8"
# version on the left for release regex
lib3h_protocol = { version = "=0.0.10", path = "../lib3h_protocol" }
lib3h_crypto_api = { version = "=0.0.10", path = "../crypto_api" }
nanoid = "=0.2.0"
tungstenite = "=0.6.1"
url = "=1.7.2"
url_serde = "=0.2.0"
native-tls = "=0.2.2"
rmp-serde = "=0.13.7"
serde = "=1.0.89"
serde_derive = "=1.0.89"
log = "=0.4.8"
# Should be dev only
lazy_static = "=1.2.0"

[dev-dependencies]
lib3h_sodium = { version = "=0.0.10", path = "../sodium" }
unwrap_to = "=0.1.0"
env_logger = "=0.6.1"
bincode = "=1.1.4"
multihash = "=0.8.0"
