[package]
name = "lib3h"
version = "0.0.32"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
# crates.io stuff
description = "The lib3h p2p communication rust library."
keywords = ["holochain", "holo", "p2p", "network"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h"
repository = "https://github.com/holochain/lib3h"

[dependencies]
backtrace = "=0.3.27"
detach = { version = "=0.0.32", path = "../detach" }
env_logger = "=0.6.1"
hcid = "=0.0.6"
holochain_persistence_api = "=0.0.13"
holochain_tracing = "=0.0.16"
# version on the left for release regex
lib3h_protocol = { version = "=0.0.32", path = "../lib3h_protocol" }
lib3h_p2p_protocol = { version = "=0.0.32", path = "../p2p_protocol" }
lib3h_crypto_api = { version = "=0.0.32", path = "../crypto_api" }
lib3h_zombie_actor = { version = "=0.0.32", path = "../zombie_actor" }
lib3h_sodium = { version = "=0.0.32", path = "../sodium" }
lib3h_mdns = { version = "=0.0.32", path = "../mdns" }
nanoid = "=0.2.0"
tungstenite = "=0.9.2"
url = { version = "=2.1.0", features = ["serde"] }
native-tls = "=0.2.3"
rmp-serde = "=0.13.7"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = "=1.0.39"
shrinkwraprs = "=0.3.0"
log = "=0.4.8"
predicates = "=1.0.1"
# Should be dev only
lazy_static = "=1.4.0"
openssl = "0.10.25"
rand = "0.7.2"

[dev-dependencies]
crossbeam-channel = "=0.3.8"
unwrap_to = "=0.1.0"
bincode = "=1.1.4"
multihash = "=0.8.0"
regex = "=1.1.2"
xoroshiro128 = "0.3.0"
hexf = "0.1.0"
rand = "0.7.0"
tempfile = "=3.1.0"
edit-distance = "=2.1.0"
