[package]
name = "lib3h_protocol"
version = "0.0.4-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
# crates.io stuff
description = "Protocol definition for interacting with Lib3h."
keywords = ["holochain", "holo", "p2p", "network"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_protocol"
repository = "https://github.com/holochain/lib3h"

[dependencies]
failure = "=0.1.5"
holochain_persistence_api = "=0.0.5"
rmp-serde = "=0.13.7"
serde = "=1.0.89"
serde_derive = "=1.0.89"
url = "=1.7.2"
url_serde = "=0.2.0"
