[package]
name = "lib3h_protocol"
version = "0.0.33"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
# crates.io stuff
description = "Protocol definition for interacting with Lib3h."
keywords = ["holochain", "holo", "p2p", "network"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_protocol"
repository = "https://github.com/holochain/lib3h"

[dependencies]
backtrace = "=0.3.27"
base64 = "=0.10.1"
holochain_persistence_api = "=0.0.14"
rmp-serde = "=0.13.7"
serde = "=1.0.89"
serde_derive = "=1.0.89"
url_serde = "=0.2.0"
shrinkwraprs = "=0.3.0"
url = { version = "=2.1.0", features = ["serde"] }

[dev-dependencies]
uuid = "=0.7.1"
