[package]
name = "lib3h_mdns"
version = "0.0.10"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h mdns LAN discovery module"
keywords = ["holochain", "holo", "mdns", "network-programming"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_mdns"
repository = "https://github.com/holochain/lib3h"

[dependencies]
byteorder = "=1.3.1"
net2 = "=0.2.33"
rand = { version = "0.7.0", features = ["wasm-bindgen", "stdweb"] }
crossbeam-channel = "0.3.8"
hostname = "^0.1"
get_if_addrs = "0.5.3"
regex = "1.1.2"
log = "0.4.8"
# lib3h = { version = "=0.0.10", path = "../lib3h" }
