[package]
name = "lib3h_mdns"
version = "0.0.26"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h mdns LAN discovery module"
keywords = ["holochain", "holo", "mdns", "network-programming"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_mdns"
repository = "https://github.com/holochain/lib3h"

[dependencies]
byteorder = "=1.3.2"
net2 = "=0.2.33"
hostname = "^0.1"
regex = "1.1.2"
log = "0.4.8"
zeroize = "0.10.0"
url = "=2.1.0"
nanoid = "0.2.0"
lib3h_protocol = { version = "=0.0.26", path = "../lib3h_protocol" }

[dev-dependencies]
lib3h_sodium = { version = "=0.0.26", path = "../sodium" }
get_if_addrs = "0.5.3"
