[package]
name = "lib3h_p2p_protocol"
version = "0.0.24"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "Lib3h Protocol definition for inter-node p2p communication."
keywords = ["holochain", "holo", "p2p", "network"]
categories = ["network-programming"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_p2p_protocol"
repository = "https://github.com/holochain/lib3h"

[dependencies]
capnp = "=0.10.0"
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_json = "=1.0.39"
