[package]
name = "persistence_impl"
version = "0.0.17-alpha2"
authors = ["Holochain Core Dev Team <devcore@lib3h.org>"]
edition = "2018"

[dependencies]
serde = "=1.0.89"
serde_derive = "=1.0.89"
serde_test = "=1.0.89"
multihash = "=0.8.0"
lib3h_persistence = { path = "../persistence" }
lazy_static = "=1.2.0"
glob = "=0.3.0"
uuid = { version = "=0.7.1", features = ["v4"] }
pickledb = "=0.4.0"


[dev-dependencies]
lib3h_persistence = { path = "../persistence" }
tempfile = "=3.0.7"
