[package]
name = "lib3h_sodium"
version = "0.0.5"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h libsodium wrapper providing memory secure api access"
keywords = ["holochain", "holo", "nacl", "libsodium", "cryptography"]
categories = ["cryptography"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_sodium"
repository = "https://github.com/holochain/lib3h"

[dependencies]
# keep version on the left for regex
lib3h_crypto_api = { version = "=0.0.5", path = "../crypto_api" }
lazy_static = "=1.2.0"
libc = "=0.2.58"
rust_sodium = "=0.10.2"
rust_sodium-sys = "=0.10.4"
