[package]
name = "lib3h_sodium"
version = "0.0.26"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h libsodium wrapper providing memory secure api access"
keywords = ["holochain", "holo", "nacl", "libsodium", "cryptography"]
categories = ["cryptography"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_sodium"
repository = "https://github.com/holochain/lib3h"

[dependencies]
# keep version on the left for regex
lib3h_crypto_api = { version = "=0.0.26", path = "../crypto_api" }
lazy_static = "=1.4.0"
libc = "=0.2.58"
rust_sodium = { git = "https://github.com/maidsafe/rust_sodium", rev = "bf2688a29aaf3f0198bf1c73d4b83e945a33a175" }
rust_sodium-sys = { git = "https://github.com/maidsafe/rust_sodium", rev = "bf2688a29aaf3f0198bf1c73d4b83e945a33a175" }
