[package]
name = "lib3h_zombie_actor"
version = "0.0.35"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h actor request tracking module"
keywords = ["holochain", "holo"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_ghost_actor"
repository = "https://github.com/holochain/lib3h"

[dependencies]
backtrace = "=0.3.27"
crossbeam-channel = "=0.3.8"
detach = { version = "=0.0.35", path = "../detach" }
holochain_tracing = "=0.0.16"
lock_api = "=0.1.5"
nanoid = "=0.2.0"
parking_lot = "=0.7.1"
shrinkwraprs = "=0.3.0"
log = "=0.4.8"
predicates = "=1.0.1"
lazy_static = "=1.4.0"
regex = "=1.1.2"
[dev-dependencies]
env_logger = "=0.6.1"
