[package]
name = "lib3h_hbc"
version = "0.0.1-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h simulation test framework"
keywords = ["holochain", "holo"]
categories = ["development-tools::testing"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_hbc"
repository = "https://github.com/holochain/lib3h"

[dependencies]
crossbeam-channel = "=0.3.8"
