[package]
name = "lib3h_hbc_cli"
version = "0.0.1-alpha1"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "lib3h simulation test framework"
keywords = ["holochain", "holo"]
categories = ["development-tools::testing", "command-line-utilities"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/lib3h_hbc_cli"
repository = "https://github.com/holochain/lib3h"

[dependencies]
lib3h_hbc = { path = "../hbc", version = "=0.0.1-alpha1" }
linefeed = "=0.6.0"

[[bin]]
name = "lib3h_hbc_cli"
path = "src/main.rs"
