[package]
name = "ghost_actor_build_demo"
version = "0.0.10"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "Code generation in build.rs demo for GhostActor: Actor System designed for ergonomic async request callbacks"
keywords = ["holochain", "holo"]
categories = ["asynchronous"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ghost_actor_build_demo"
repository = "https://github.com/holochain/lib3h"

[dependencies]
ghost_actor = { version = "=0.0.10", path = ".." }

[build-dependencies]
ghost_actor = { version = "=0.0.10", path = ".." }
proc-macro2 = "=1.0.2"
quote = "=1.0.2"
