[package]
name = "dump_lib3h_protocol_as_json_for_n3h"
version = "0.0.34"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "delete me once n3h is deprecated"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde_json = { version = "=1.0.47", features = ["preserve_order"] }
lib3h_protocol = { version = "=0.0.34", path = "../../lib3h_protocol" }
url = { version = "=2.1.0", features = ["serde"] }
